--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 Tutorials/**/.vs/
+Demos/**/.vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
